--- a/css/style-contactos.css
+++ b/css/style-contactos.css
@@ -234,7 +234,20 @@ header{
     object-fit: cover; /*Para que las imagenes no se estiren o no se distorcicones independientemente de su tamaño*/
     transition: all .3s ease-out;
     transform: translateY(-50px);
-    box-shadow: 0px 20px 20px rgb(182, 184, 182);
+    box-shadow: 0px 20px 20px rgb(143, 140, 140);
+animation: mov 3s linear infinite;
+}
+@keyframes mov {
+    0%{
+     transform: translateY(-50px);
+    }
+    50%{
+     transform: translateY(-55px);
+    }
+    100%{
+     transform: translateY(-50px);
+    }
+    
 }
 /* .contactos img:hover{
     transform: translateY(-50px);
@@ -326,7 +339,7 @@ header{
         border-radius: 30px;
     }
     50%{
-        box-shadow: 15px 9px 20px rgb(182, 184, 182,0.2);
+        box-shadow: 15px 9px 20px rgb(182, 184, 182,0.5);
     }
     
 }
